# J-manual

final_version/: JAUMIN.md
final_version/example/Helloworld/input/: Helloworld.input
final_version/example/Helloworld/source/: main.cpp
final_version/example/Poisson_FEM/input/: holiday-jaumin.input  mesh-2d-10.k  mesh_0.01.k
final_version/example/Poisson_FEM/source/: CMakeLists.txt  LevelCompute.cpp  LevelCompute.h  PatchCompute.cpp  PatchCompute.h  main.cpp
final_version/example/Poisson_FVM/input/: square.k
final_version/example/Poisson_FVM/source/: CMakeLists.txt  Poisson.cpp  Poisson.h  PoissonLevel.cpp  PoissonLevel.h  comflux.f90  computeu.f90  fort.h  init.f90  main.cpp
version1/: Chapter1.md
